Safari border-radius + overflow: hidden + CSS transform fix

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
   width: 200px;
   background-color: #0050a5;
   overflow: hidden;
+  /* Safari border-radius + overflow: hidden + CSS transform fix */
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .circle::before,
